Fixed layout issue on mobile devices by changing the styling and size of buttons

--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,9 @@ body {
   border-radius: 500px;
   border: none;
   color: #f1f1f1;
-  margin: 1rem;
-  padding: 0.5rem 2.5rem;
-  font-size: 1.2rem;
+  margin: 0.8rem;
+  padding: 0.25rem 1.8rem;
+  font-size: 1.1rem;
   font-family: inherit;
   cursor: pointer;
 }
